--- a/client/views/home/index.ejs
+++ b/client/views/home/index.ejs
@@ -10,6 +10,7 @@
     <script> 
       // jQuery.fn.prettify = function () { this.html(prettyPrintOne(this.html())); };
     </script>
+
     <link rel="stylesheet" type="text/css" href="assets/js/google-code-prettify/prettify.css">
     <style>
     </style>
@@ -18,8 +19,10 @@
     <pre id="content" class="prettyprint linenums"></pre>
     <script>
       var socket = io.connect('http://127.0.0.1:6543');
-      socket.on('content', function (data) {
+      console.log('test')
+      socket.on('outgoing_delta', function (data) {
         console.log(data)
+
         $("#content").text(data);
         
       });
